--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --branco-principal :#ffff;
     --cinza-secundario:#c0c0c0;
-    --botao-azul:#00030c;
+    --botao-azul:#167bf7;
     --cor-de-fundo: #00030c;
     --fonte-principal:"inter"
 }
