--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
 
 .botao_secundario{
@@ -46,3 +47,9 @@ body{
     color: var(--cinza-secundario)
 }
 
+.container_imagem{
+    margin: 1em 0 2em 0;
+}
+ .container_caixa{
+    margin:0 6em
+ }
