--- a/style.css
+++ b/style.css
@@ -3,18 +3,21 @@
     --cinza-secundario:#c0c0c0;
     --botao-azul:#167bf7;
     --cor-de-fundo: #00030c;
-    --fonte-principal:"inter"
+    --fonte-principal:"inter";
+    --botao-azul-efeito: #3c92fa;
 }
 body{
     background-color: var(--cor-de-fundo);
-    color:var(--branco-principal)
-    font-family: var(--fonte-principal)  
-      font-weight: 400
+    color:var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
-{
+*{
     margin: 0;
     padding: 0;
 }
+
 .principal{
     background-image: url(Background.png);
     background-repeat: no-repeat;
@@ -41,17 +44,33 @@ body{
 
 .botao_secundario{
     background-color: transparent;
-    border: 2px solid --branco-principal;
+    border: 2px solid var(--branco-principal)
 }
 
 .container_aviso{
-    font-size: 12px
-    color: var(--cinza-secundario)
+    font-size: 12px;
+    font-weight: 700;
 }
 
 .container_imagem{
     margin: 1em 0 2em 0;
 }
- .container_caixa{
-    margin:0 6em
+.container_caixa{
+    margin:0 6em;
  }
+.secundario_imagem{
+    width: 80%;
+}
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+.descricao_titulo{
+    font-weight: 700;
+    font-size: 40px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+.descricao_texto{
+    color: var(--cinza-secundario);
+}
