--- a/style.css
+++ b/style.css
@@ -106,3 +106,17 @@ body{
     font-size: 32px;
     color: var(--botao-azul);
 }
+
+.rodape_lista{
+    display: flex;
+    justify-content: center;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+
+}
+
+.lista_link a{
+    text-decoration: none;
+    color
+}
